RESOLVED FIXED52505
[jsfunfuzz] Incorrect handling of consecutive duplicate labels
https://bugs.webkit.org/show_bug.cgi?id=52505
Summary [jsfunfuzz] Incorrect handling of consecutive duplicate labels
Oliver Hunt
Reported 2011-01-14 19:03:07 PST
When I reworked label handling I incorrectly compared Identifier*'s rather than their impls. This caused the following test to assert: tryItOut("\"\";L:L:if(s);else if(\"\")\"\"")
Attachments
Patch (3.97 KB, patch)
2011-01-14 22:00 PST, Oliver Hunt
mjs: review+
Oliver Hunt
Comment 1 2011-01-14 19:07:49 PST
I've fixed this but my tree just picked up a "rebuild the world" patch so it's going to take a while to get the testcase verified.
Oliver Hunt
Comment 2 2011-01-14 22:00:05 PST
Maciej Stachowiak
Comment 3 2011-01-14 22:07:45 PST
Comment on attachment 79052 [details] Patch r=me
Oliver Hunt
Comment 4 2011-01-14 22:35:42 PST
Note You need to log in before you can comment on or make changes to this bug.