2011-01-14  Oliver Hunt  <oliver@apple.com>

Reviewed by Maciej Stachowiak.

        [jsfunfuzz] Incorrect handling of consecutive duplicate labels
        https://bugs.webkit.org/show_bug.cgi?id=52505

        Add a few tests of consecutive labels containing duplicates to the parser check.

        * fast/js/parser-syntax-check-expected.txt:
        * fast/js/script-tests/parser-syntax-check.js:
2011-01-14  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        [jsfunfuzz] Incorrect handling of consecutive duplicate labels
        https://bugs.webkit.org/show_bug.cgi?id=52505

        Compare StringImpl*'s instead of Identifier*'s when looking for duplicate
        labels.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseExpressionOrLabelStatement):

Canonical link: https://commits.webkit.org/66127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75872 268f45cc-cd09-0410-ab3c-d52691b4dbfc